--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -103,6 +103,7 @@
     padding: 10px;
 }
 
+
 .card-box img {
     height: 180px;
     width: 100%;
@@ -134,7 +135,9 @@
     border: 0;
     font-weight: 600;
 }
-
+.card-box button:hover{
+    cursor: pointer;
+}
 .card-wrap .card {
     border-radius: 6px;
     position: relative;
